--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Espaço 776</title>
-    <link rel="stylesheet" href="css/style776.css" />
+    <link rel="stylesheet" href="style/style776.css" />
   </head>
 
   <body>
@@ -39,9 +39,9 @@
           <li><a href="#">Galeria</a></li>
           <li><a href="#">Localização</a></li>
           <li><a href="#">Contato</a></li>
-          <li><a href="#" target="_blank"><img class="icon" src="media/facebook (1).png"></a></li>
-          <li><a href="#" target="_blank"><img class="icon" src="media/instagram (1).png"></a></li>
-          <li><a href="#" target="_blank"><img class="icon" src="media/twitter (1).png"></a></li>
+          <li><a href="#" target="_blank"><img class="icon" src="assets/facebook (1).png"></a></li>
+          <li><a href="#" target="_blank"><img class="icon" src="assets/instagram (1).png"></a></li>
+          <li><a href="#" target="_blank"><img class="icon" src="assets/twitter (1).png"></a></li>
         </ul>
         <h3 class="rights">
           &copy; Espaço 776
